@@ -124,6 +124,7 @@ EVAS_EINA_STATIC_MODULE_DEFINE(image_loader, gif);
 EVAS_EINA_STATIC_MODULE_DEFINE(image_loader, eet);
 EVAS_EINA_STATIC_MODULE_DEFINE(image_loader, edb);
 EVAS_EINA_STATIC_MODULE_DEFINE(image_loader, tga);
+EVAS_EINA_STATIC_MODULE_DEFINE(image_loader, wbmp);
 EVAS_EINA_STATIC_MODULE_DEFINE(image_saver, edb);
 EVAS_EINA_STATIC_MODULE_DEFINE(image_saver, eet);
 EVAS_EINA_STATIC_MODULE_DEFINE(image_saver, jpeg);
@@ -235,6 +236,9 @@ static const struct {
 #endif
 #ifdef EVAS_STATIC_BUILD_TGA
   EVAS_EINA_STATIC_MODULE_USE(image_loader, tga),
+#endif
+#ifdef EVAS_STATIC_BUILD_WBMP
+  EVAS_EINA_STATIC_MODULE_USE(image_loader, wbmp),
 #endif
 #ifdef EVAS_STATIC_BUILD_EDB
   EVAS_EINA_STATIC_MODULE_USE(image_saver, edb),
