@@ -68,3 +68,9 @@ SUBDIRS += tga
 endif
 endif
 
+if BUILD_LOADER_WBMP
+if !EVAS_STATIC_BUILD_WBMP
+SUBDIRS += wbmp
+endif
+endif
+
